--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="cn.xiaojs.xma"
-    android:versionCode="61"
-    android:versionName="2.1.3">
+          xmlns:tools="http://schemas.android.com/tools"
+          package="cn.xiaojs.xma"
+          android:versionCode="61"
+          android:versionName="2.1.3">
 
     <!-- Required -->
     <permission
@@ -61,7 +61,7 @@
         <activity
                 android:name=".ui.SplashActivity"
                 android:theme="@style/SplashTheme"
-        >
+                >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -86,7 +86,7 @@
         <activity
                 android:name=".ui.account.BindThirdAccountActivity"
                 android:screenOrientation="portrait"
-        >
+                >
         </activity>
         <activity
                 android:name=".ui.account.ForgetPasswordStepOneActivity"
@@ -99,7 +99,8 @@
                 android:launchMode="singleTask"
                 android:screenOrientation="portrait"
                 android:windowSoftInputMode="adjustPan"
-        >
+                android:theme="@style/trans_status_bar"
+                >
             <intent-filter>
                 <action android:name="cn.xiaojs.xma.chatkit.chat_notification_action"/>
                 <category android:name="android.intent.category.DEFAULT"/>
@@ -110,11 +111,14 @@
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
+
                 <category android:name="android.intent.category.BROWSABLE"/>
                 <category android:name="android.intent.category.DEFAULT"/>
-                <data android:scheme="xiaojs"
-                    android:host="www.xiaojs.cn"
-                    />
+
+                <data
+                        android:scheme="xiaojs"
+                        android:host="www.xiaojs.cn"
+                        />
             </intent-filter>
 
         </activity>
@@ -129,8 +133,9 @@
                 android:name=".ui.account.RegisterActivity"
                 android:screenOrientation="portrait"
                 android:theme="@android:style/Theme.NoTitleBar.Fullscreen"/>
-        <activity android:name=".ui.mine.SettingsActivity"
-                  android:screenOrientation="portrait"/>
+        <activity
+                android:name=".ui.mine.SettingsActivity"
+                android:screenOrientation="portrait"/>
         <activity
                 android:name=".ui.account.ModifyPasswordActivity"
                 android:screenOrientation="portrait"/>
@@ -160,11 +165,12 @@
                 android:screenOrientation="portrait"/>
         <activity
                 android:name=".ui.lesson.xclass.SearchClassActivity"
-            android:windowSoftInputMode="adjustPan"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".ui.lesson.LessonCreationActivity"
-            android:screenOrientation="portrait"
-            />
+                android:windowSoftInputMode="adjustPan"
+                android:screenOrientation="portrait"/>
+        <activity
+                android:name=".ui.lesson.LessonCreationActivity"
+                android:screenOrientation="portrait"
+                />
         <activity
                 android:name=".ui.lesson.TeachingSubjectActivity"
                 android:screenOrientation="portrait"
@@ -212,10 +218,11 @@
         <activity
                 android:name=".ui.mine.MyEnrollActivity"
                 android:screenOrientation="portrait"/>
-        <activity android:name=".ui.classroom.main.ClassroomActivity"
-                  android:screenOrientation="portrait"
-                  android:configChanges="screenSize|orientation"
-                  android:theme="@android:style/Theme.NoTitleBar.Fullscreen"/>
+        <activity
+                android:name=".ui.classroom.main.ClassroomActivity"
+                android:screenOrientation="portrait"
+                android:configChanges="screenSize|orientation"
+                android:theme="@android:style/Theme.NoTitleBar.Fullscreen"/>
         <activity
                 android:name=".ui.search.SearchActivity"
                 android:screenOrientation="portrait"
@@ -225,7 +232,8 @@
                 android:screenOrientation="portrait"/>
         <activity
                 android:name=".ui.personal.PersonHomeActivity"
-                android:screenOrientation="portrait"/>
+                android:screenOrientation="portrait"
+                />
         <activity
                 android:name=".ui.home.MomentCommentActivity"
                 android:screenOrientation="portrait"
@@ -294,38 +302,47 @@
         </activity>
 
 
-        <activity android:name=".ui.recordlesson.RecordedLessonActivity"
-            android:screenOrientation="portrait"
-            />
-        <activity android:name=".ui.recordlesson.SelectDirectoryActivity"
-            android:screenOrientation="portrait"
-            />
-        <activity android:name=".ui.recordlesson.AddLessonDirActivity"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan|stateHidden"
-            />
-        <activity android:name=".ui.recordlesson.CreateRecordedLessonActivity"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan|stateHidden"
-            />
-        <activity android:name=".ui.recordlesson.RLDirListActivity"
-            android:screenOrientation="portrait"
-            />
-        <activity android:name=".ui.recordlesson.SearchRecordedLessonActivity"
-            android:windowSoftInputMode="adjustPan"
-            android:screenOrientation="portrait"
-            />
+        <activity
+                android:name=".ui.recordlesson.RecordedLessonActivity"
+                android:screenOrientation="portrait"
+                />
+        <activity
+                android:name=".ui.recordlesson.SelectDirectoryActivity"
+                android:screenOrientation="portrait"
+                />
+        <activity
+                android:name=".ui.recordlesson.AddLessonDirActivity"
+                android:screenOrientation="portrait"
+                android:windowSoftInputMode="adjustPan|stateHidden"
+                />
+        <activity
+                android:name=".ui.recordlesson.CreateRecordedLessonActivity"
+                android:screenOrientation="portrait"
+                android:windowSoftInputMode="adjustPan|stateHidden"
+                />
+        <activity
+                android:name=".ui.recordlesson.RLDirListActivity"
+                android:screenOrientation="portrait"
+                />
+        <activity
+                android:name=".ui.recordlesson.SearchRecordedLessonActivity"
+                android:windowSoftInputMode="adjustPan"
+                android:screenOrientation="portrait"
+                />
 
-        <activity android:name=".ui.recordlesson.EnrollConfirmActivity"
-            android:screenOrientation="portrait"
-            />
-        <activity android:name=".ui.recordlesson.EnrollRLessonSuccessActivity"
-            android:screenOrientation="portrait"
-            />
+        <activity
+                android:name=".ui.recordlesson.EnrollConfirmActivity"
+                android:screenOrientation="portrait"
+                />
+        <activity
+                android:name=".ui.recordlesson.EnrollRLessonSuccessActivity"
+                android:screenOrientation="portrait"
+                />
 
-        <activity android:name=".ui.lesson.MyCourseListActivity"
-            android:screenOrientation="portrait"
-            />
+        <activity
+                android:name=".ui.lesson.MyCourseListActivity"
+                android:screenOrientation="portrait"
+                />
 
         <activity
                 android:name=".TestActivity"
@@ -360,79 +377,106 @@
         <activity android:name=".ui.lesson.EnrolledStudentActivity">
         </activity>
         <activity android:name=".ui.GuideBrowseActivity"/>
-        <activity android:name=".ui.ScanQrcodeActivity"
-                  android:screenOrientation="portrait"/>
-        <activity android:name="com.kaola.qrcodescanner.qrcode.QrCodeActivity"
-                  android:screenOrientation="portrait"/>
-        <activity android:name=".ui.common.PlayStreamingActivity"/>
-        <activity android:name=".ui.lesson.xclass.CreateClassActivity"
-                  android:windowSoftInputMode="adjustPan|stateAlwaysHidden"
-                  android:screenOrientation="portrait"/>
-        <activity android:name=".ui.lesson.xclass.CreateTimetableActivity"
-                  android:windowSoftInputMode="stateAlwaysHidden"
-                  android:screenOrientation="portrait"/>
-        <activity android:name=".ui.lesson.xclass.ManualAddStudentActivity"
-                  android:screenOrientation="portrait"/>
-        <activity android:name=".ui.lesson.xclass.AddLessonNameActivity"
-                  android:screenOrientation="portrait"/>
-        <activity android:name=".ui.lesson.xclass.ShareQrcodeActivity"
-                  android:screenOrientation="portrait"/>
-        <activity android:name=".ui.lesson.xclass.ClassInfoActivity"
-                  android:screenOrientation="portrait"/>
-        <activity android:name=".ui.lesson.xclass.StudentsListActivity"
-                  android:screenOrientation="portrait"/>
-        <activity android:name=".ui.lesson.xclass.ClassesListActivity"
-                  android:screenOrientation="portrait"
-            android:launchMode="singleTask"
-            />
-        <activity android:name=".ui.lesson.xclass.ImportStudentFormClassActivity"
-                  android:screenOrientation="portrait"/>
-        <activity android:name=".ui.lesson.EnrollSuccessActivity"/>
-        <activity android:name=".ui.lesson.xclass.AddStudentActivity"
-                  android:screenOrientation="portrait"/>
-        <activity android:name=".ui.lesson.xclass.VerificationActivity"
-                  android:screenOrientation="portrait"/>
-        <activity android:name=".ui.lesson.xclass.EditTimetableActivity"
-                  android:screenOrientation="portrait"
-                />
-        <activity android:name=".ui.grade.ChoiceFolderActivity"
-                  android:screenOrientation="portrait"
-                />
-        <activity android:name=".ui.grade.MoveFileActivity"
-                  android:screenOrientation="portrait"
-                />
-        <activity android:name=".ui.recordlesson.CreateRecordlessonActivity"
-                  android:screenOrientation="portrait"
-                />
-        <activity android:name=".ui.grade.ImportVideoActivity"
-                  android:screenOrientation="portrait"
-                />
-        <activity android:name=".ui.recordlesson.RecordedLessonEnrollActivity"
+        <activity
+                android:name=".ui.ScanQrcodeActivity"
                 android:screenOrientation="portrait"/>
-        <activity android:name=".ui.recordlesson.EnrolledStudentsActivity"
-                  android:screenOrientation="portrait"/>
-        <activity android:name=".ui.recordlesson.EnrolledStudentInfoActivity"
-                  android:screenOrientation="portrait"/>
-        <activity android:name=".ui.recordlesson.ManualRegistrationActivity"
-                  android:screenOrientation="portrait"/>
-        <activity android:name=".ui.recordlesson.RecordedLessonDetailActivity"
-                  android:screenOrientation="portrait"/>
-        <activity android:name=".ui.grade.MaterialFragmentActivity"
-                  android:screenOrientation="portrait"/>
+        <activity
+                android:name="com.kaola.qrcodescanner.qrcode.QrCodeActivity"
+                android:screenOrientation="portrait"/>
+        <activity android:name=".ui.common.PlayStreamingActivity"/>
+        <activity
+                android:name=".ui.lesson.xclass.CreateClassActivity"
+                android:windowSoftInputMode="adjustPan|stateAlwaysHidden"
+                android:screenOrientation="portrait"/>
+        <activity
+                android:name=".ui.lesson.xclass.CreateTimetableActivity"
+                android:windowSoftInputMode="stateAlwaysHidden"
+                android:screenOrientation="portrait"/>
+        <activity
+                android:name=".ui.lesson.xclass.ManualAddStudentActivity"
+                android:screenOrientation="portrait"/>
+        <activity
+                android:name=".ui.lesson.xclass.AddLessonNameActivity"
+                android:screenOrientation="portrait"/>
+        <activity
+                android:name=".ui.lesson.xclass.ShareQrcodeActivity"
+                android:screenOrientation="portrait"/>
+        <activity
+                android:name=".ui.lesson.xclass.ClassInfoActivity"
+                android:screenOrientation="portrait"/>
+        <activity
+                android:name=".ui.lesson.xclass.StudentsListActivity"
+                android:screenOrientation="portrait"/>
+        <activity
+                android:name=".ui.lesson.xclass.ClassesListActivity"
+                android:screenOrientation="portrait"
+                android:launchMode="singleTask"
+                />
+        <activity
+                android:name=".ui.lesson.xclass.ImportStudentFormClassActivity"
+                android:screenOrientation="portrait"/>
+        <activity android:name=".ui.lesson.EnrollSuccessActivity"/>
+        <activity
+                android:name=".ui.lesson.xclass.AddStudentActivity"
+                android:screenOrientation="portrait"/>
+        <activity
+                android:name=".ui.lesson.xclass.VerificationActivity"
+                android:screenOrientation="portrait"/>
+        <activity
+                android:name=".ui.lesson.xclass.EditTimetableActivity"
+                android:screenOrientation="portrait"
+                />
+        <activity
+                android:name=".ui.grade.ChoiceFolderActivity"
+                android:screenOrientation="portrait"
+                />
+        <activity
+                android:name=".ui.grade.MoveFileActivity"
+                android:screenOrientation="portrait"
+                />
+        <activity
+                android:name=".ui.recordlesson.CreateRecordlessonActivity"
+                android:screenOrientation="portrait"
+                />
+        <activity
+                android:name=".ui.grade.ImportVideoActivity"
+                android:screenOrientation="portrait"
+                />
+        <activity
+                android:name=".ui.recordlesson.RecordedLessonEnrollActivity"
+                android:screenOrientation="portrait"/>
+        <activity
+                android:name=".ui.recordlesson.EnrolledStudentsActivity"
+                android:screenOrientation="portrait"/>
+        <activity
+                android:name=".ui.recordlesson.EnrolledStudentInfoActivity"
+                android:screenOrientation="portrait"/>
+        <activity
+                android:name=".ui.recordlesson.ManualRegistrationActivity"
+                android:screenOrientation="portrait"/>
+        <activity
+                android:name=".ui.recordlesson.RecordedLessonDetailActivity"
+                android:screenOrientation="portrait"/>
+        <activity
+                android:name=".ui.grade.MaterialFragmentActivity"
+                android:screenOrientation="portrait"/>
 
-        <activity android:name=".ui.classroom2.Classroom2Activity"
-                  android:screenOrientation="portrait"
-                  android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
-                  />
+        <activity
+                android:name=".ui.classroom2.Classroom2Activity"
+                android:screenOrientation="portrait"
+                android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
+                />
 
-        <activity android:name=".ui.common.PlayActivity"
-                  android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode"
-                  android:launchMode="singleTop"
-                  android:theme="@style/PlayerVideoTheme"
+        <activity
+                android:name=".ui.common.PlayActivity"
+                android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode"
+                android:launchMode="singleTop"
+                android:theme="@style/PlayerVideoTheme"
                 >
             <intent-filter>
                 <action android:name="cn.xiaojs.xma.player.action.VIEW"/>
                 <category android:name="android.intent.category.DEFAULT"/>
+
                 <data android:scheme="http"/>
                 <data android:scheme="https"/>
                 <data android:scheme="content"/>
@@ -453,6 +497,7 @@
                 android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
+
                 <category android:name="android.intent.category.DEFAULT"/>
                 <category android:name="android.intent.category.BROWSABLE"/>
 
@@ -641,15 +686,15 @@
 
         <!--友盟-->
         <meta-data
-            android:name="UMENG_APPKEY"
-            android:value="592f92426e27a41dc2001d26" >
+                android:name="UMENG_APPKEY"
+                android:value="592f92426e27a41dc2001d26">
         </meta-data>
 
         <activity
-            android:name=".wxapi.WXEntryActivity"
-            android:label="@string/app_name"
-            android:exported="true"
-            />
+                android:name=".wxapi.WXEntryActivity"
+                android:label="@string/app_name"
+                android:exported="true"
+                />
 
     </application>
 
